Fix menu overflow

--- a/style.css
+++ b/style.css
@@ -305,7 +305,7 @@ footer p {
         grid-column: 1;
         background: #333;
         place-items: center;
-        border-bottom-left-radius: 1rem;
+        border-bottom-left-radius: 4rem;
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     }
 
@@ -319,7 +319,7 @@ footer p {
         right: 0px;
         top: 7.9rem;
         width: 30rem;
-        height: 24.5rem;
+        height: calc(100vh - 7.9rem);
         animation: 300ms fade;
     }
 
